# km003c-protocol-research

./: .gitignore  .ruff.toml  71-powerz-km003c.rules  CLAUDE.md  CONTRIBUTING.md  README.md  README_transaction_splitter.md  analyze_control_frame_patterns.py  automated_split_final.jsonl  compare_splits.py  corrected_split_output.jsonl  debug_output3.jsonl  example_usage.py  for_manual_split_claude_manually_split.jsonl  for_manual_split_gemini_transactions.jsonl  for_manual_split_gpt.jsonl  for_manual_split_gpt_manually_split.jsonl  for_manual_splitting.jsonl.bak  frames_final.jsonl  frames_manual_sample.jsonl  frames_transactions.csv  justfile  protocol.md  pyproject.toml  recommended_jsonl_structure.md  split_dataset_by_source.py  split_frames.py  split_transactions.py  split_transactions.sh  split_transactions_final.py  split_transactions_grouped.py  split_usb_transactions_jsonl.py  test_refactored_lib.py  transaction_splitting_guide.md  usb_analyzer_app.py  usb_complete_dataset.parquet  usb_control_transfers_analysis.md  usb_dataset_split_final.jsonl  usb_dataset_split_grouped.jsonl  usb_in_a_nutshell.md  (+4 more)
.github/workflows/: ci.yml
.plandex-v2/: projects-v2.json
analysis/: pd_analysis.md
analysis/notebooks/: pd_protocol_analysis.ipynb  pyshark_analysis.ipynb  usb_protocol_analysis.ipynb  usbpdpy_examples.ipynb
analysis/scripts/: analyze_parquet_demo.py  analyze_parquet_with_payload.py  debug_raw_packets.py  explore_packet_structure.py  helpers.py  parse_messages.py  pcap_to_parquet.py  protocol_parser.py  run_parser_example.py  scan_km003c_packets.py  show_parsed_adc.py  test_protocol_parser.py
captures/: orig_new_adcsimple0.12.pcapng
data/: pd_epr0.9.pcapng  updating_firmware.7-8-9.pcapng
data/processed/: bitmask_correlation_validation.json  complete_pd_analysis.parquet  pd_messages_from_sqlite.parquet  pd_messages_raw_from_sqlite.parquet  request_response_analysis.json  rust_lib_analysis.json  transaction_pairs.parquet  usb_master_dataset.parquet
docs/: .~lock.KM002C&3C API Description.docx#  PLAN.md  README.md  adcqueue_analysis_summary.md  code_organization_strategy.md  firmware_analysis.md  firmware_format.md  implementation_status.md  km003c_protocol_specification.md  offline_log_protocol.md  pd_sqlite_export_format.md  protocol.md  protocol_reference.md  protocol_research_findings_wip.md  protocol_research_findings_wip_backup.md  protocol_specification.md  transaction_correlation_analysis.md  unknown76_authentication.md  unknown_commands_tracker.md  usb_in_a_nutshell.md  usb_transport.md  usb_transport_specification.md
docs/features/: adcqueue.md  authentication.md  offline_logs.md  pd_analysis.md  pd_trace.md
docs/firmware/: README.md  format.md  handlers.md  mtools_analysis.md  overview.md
docs/research/: code_organization_strategy.md  protocol_gaps.md  transaction_correlation.md  unknown_commands.md
docs_new/: README.md  protocol_reference.md  usb_transport.md
docs_new/features/: adcqueue.md  authentication.md  offline_logs.md  pd_analysis.md
docs_new/firmware/: format.md  handlers.md  overview.md
docs_new/research/: code_organization_strategy.md  notes.md  transaction_correlation.md  unknown_commands.md
fw/: KM003C_V1.9.9.mencrypt  KM003C_V1.9.9.raw
km003c_analysis/: __init__.py  analysis.py  app.py  export.py  transaction_tagger.py  transactions.py  usb_transaction_splitter.py
km003c_analysis/core/: __init__.py  transaction_tagger.py  usb_transaction_splitter.py
km003c_analysis/dashboards/: __init__.py  main.py  pd_analysis.py
km003c_analysis/exporters/: __init__.py  summary.py
km003c_analysis/parsers/: __init__.py  protocol.py
km003c_analysis/tools/: __init__.py  pd_sqlite_analyzer.py
notebooks/: analyze_km003c_protocol.py  analyze_pd_capture_new9.py  parse_pd_sqlite.py  pd_analysis_dashboard.py  pd_protocol_analysis.ipynb  summarize_pd_messages.py  usb_protocol_analysis.ipynb  usbpdpy_examples.ipynb
py-analysis/: README.md  main.py  pyproject.toml  usbpdpy_examples.ipynb
rust_pcap_converter/: Cargo.toml
rust_pcap_converter/src/: main.rs
scripts/: adc_simple.py  analyze_km003c_protocol.py  analyze_request_response_correlation.py  analyze_temp.py  analyze_unknown_commands.py  analyze_with_km003c_lib.py  capture_pd_negotiation.py  check_markdown_links.py  decrypt_firmware.py  decrypt_offline_adc.py  download_offline_log.py  dump_device_info.py  explore_pd_capture_new9.py  export_complete_pd_analysis.py  export_pd_messages.py  export_pd_messages_raw.py  extract_pd_from_usb_capture.py  km003c_helpers.py  memory_scan.py  parse_km003c_packets.py  probe_peripherals.py  read_mcu_id.py  read_mcu_id_v2.py  run_adcqueue.py  run_adcqueue_single.py  run_pd_live.py  run_pdstatus.py  run_unknown68_decrypt.py  run_unknown68_memory_download.py  run_unknown68_working.py  summarize_pd_messages.py  test_adcqueue_single.py  test_pd_live.py  test_pd_parsing_offline.py  test_pdstatus.py  test_unknown68_captured.py  validate_bitmask_correlation.py  visualize_request_response.py
scripts/experiments/: extract_all_source_capabilities.py
scripts/parquet/: analyze_km003c_protocol.py  analyze_request_response_correlation.py  analyze_unknown_commands.py  analyze_with_km003c_lib.py  explore_pd_capture_new9.py  export_complete_pd_analysis.py  export_pd_messages.py  export_pd_messages_raw.py  extract_all_source_capabilities.py  extract_pd_from_usb_capture.py  parse_km003c_packets.py  parse_pd_wrapped.py  summarize_pd_messages.py  test_source_capabilities_parsing.py  (+3 more)
tests/: README.md  test_helpers.py  test_helpers_parsing.py  test_packet_parsing.py  test_parsing_integration.py  test_raw_packet.py  test_transaction_splitter.py  test_transaction_tagger.py
tools/: annotate_transactions_minimal.py  compare_manual_vs_auto.py  make_manual_split_from_auto.py  split_transactions.py
transactions_per_source/: orig_adc_1000hz.6.jsonl  orig_adc_50hz.6.jsonl  orig_adc_record.6.jsonl  orig_new_adcsimple0.12.jsonl  orig_open_close.16.jsonl  orig_with_pd.13.jsonl  rust_simple_logger.16.jsonl
(+20 files in other folders)
