[build-system]
# Use maturin as the build backend to build the Rust extension when this
# project is packaged. For day-to-day dev, prefer `uv run maturin develop`.
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "km003c-protocol-research"
version = "0.1.0"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "numpy>=2.3.3",
    "usbpdpy>=0.1.0",
    "polars",
    "streamlit>=1.49.1",
    "plotly>=6.3.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    # For building the Rust extension in the active venv
    "maturin>=1.5,<2.0",
]

[tool.maturin]
# Build the external Rust crate that exports the `km003c_lib` python module.
# The crate uses the `python` feature to enable pyo3 bindings.
bindings = "pyo3"
features = ["python"]
manifest-path = "/home/okhsunrog/code/rust/km003c-rs/km003c-lib/Cargo.toml"

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]

[tool.ruff.lint]
ignore = ["E402", "F821"]
exclude = ["notebooks/*.ipynb", "tests/*.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
