[project]
name = "km003c-protocol-research"
version = "0.1.0"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "km003c==0.2.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "numpy>=2.3.3",
    "usbpdpy>=0.2.1",
    "polars",
    "streamlit>=1.49.1",
    "plotly>=6.3.0",
    "pyyaml>=6.0.2",
    "pyusb>=1.3.1",
    "pycryptodome>=3.23.0",
]

[tool.uv]
package = false

[tool.uv.sources]
km003c = { git = "https://github.com/okhsunrog/km003c-rs", tag = "v0.2.0" }

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "mypy>=1.18.1",
    "types-pyyaml>=6.0.12",
    "ruff>=0.13.0",
    "maturin>=1.5,<2.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
implicit_reexport = false
strict_equality = true

[[tool.mypy.overrides]]
module = ["plotly.*", "km003c.*", "streamlit.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]  
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
target-version = "py311"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"scripts/**/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Markers
markers = [
    "unit: Unit tests (no hardware required, fast)",
    "integration: Integration tests (require real KM003C device, slow)",
]

# Default: run only unit tests (fast, no device)
addopts = "-v -m unit"

# Logging
log_cli = false
log_cli_level = "INFO"
