[project]
name = "py-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.0.0",
    "pandas>=1.5.0", 
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "numpy>=1.20.0",
]

[tool.uv.sources]
usbpdpy = { index = "testpypi" }

[[tool.uv.index]]
name = "pypi"  
url = "https://pypi.org/simple/"
default = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
